name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple
extra-source-files: frontend/src/Tutorial.md

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , file-embed
               , ghcjs-dom
               , jsaddle
               , lucid
               , markdown-unlit
               , mmark
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex
               , reflex-dom
               , text
  exposed-modules:
    Frontend
    Tutorial
  ghc-options: -Wall -pgmL markdown-unlit

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
