name: tutorial
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , containers
               , file-embed
               , ghcjs-dom
               , jsaddle
               , lucid
               , markdown-unlit
               , mmark
               , modern-uri
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex
               , reflex-dom
               , text
               -- For the QuasiQuoter
               , haskell-src-meta
               , haskell-src-exts
               , template-haskell
  exposed-modules:
    Tutorial
    Reflex.MMark.Render
  ghc-options: -Wall -pgmL markdown-unlit
